# carom_sim

./: .gitignore  README.md  conftest.py  launch.py  pyproject.toml  requirements.txt  run.py  search_tester.py
offline_test_deps/: README.md
offline_test_deps/numpy/: __init__.py
outputs/tables/: direct_events.csv  direct_initial_conditions.csv  direct_states.csv  direct_summary.csv  one_cushion_events.csv  one_cushion_initial_conditions.csv  one_cushion_states.csv  one_cushion_summary.csv  two_cushion_events.csv  two_cushion_initial_conditions.csv  two_cushion_states.csv  two_cushion_summary.csv
scripts/: run_tests_offline.sh
src/: sitecustomize.py
src/carom/: __init__.py  animation.py  classifier.py  collisions.py  constants.py  geometry.py  io_utils.py  physics.py  plotting.py  search.py  simulator.py  state.py  validation.py
src/carom_sim.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_classifier.py  test_classifier_helpers.py  test_collisions.py  test_io_utils.py  test_optimization_regressions.py  test_physics.py  test_search.py  test_simulator.py  test_validation.py
